* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
* major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)

== 2.3.18 (2024-07-27) - @mojavelinux

Bug Fixes::

* position foreground image correctly when page layout changes (#2528)

Compliance::

* release lock on version of rexml (pulled in by asciidoctor-diagram and prawn-svg) now that incompatibility is resolved

== 2.3.17 (2024-06-01) - @mojavelinux

Improvements::

* always use /Producer field in document info to credit Asciidoctor PDF and Prawn, even when author is set (#2510)
* map `producer` attribute to /Producer field in document info to override or default value (#2510)
* map `publisher` attribute to /Creator field instead of /Producer field in document info; use author as fallback (#2510)

=== Details

{url-repo}/releases/tag/v2.3.17[git tag] | {url-repo}/compare/v2.3.16\...v2.3.17[full diff]

== 2.3.16 (2024-05-31) - @mojavelinux

Improvements::

* don't hyphenate autolink when hyphenation is enabled (#2521) (*@meonkeys*)
* add support for base64-encoded SVG image reference in SVG (#2512)

Bug Fixes::

* duplicate attributes on table when wrapping table in breakable or unbreakable container (#2520)

Compliance::

* lock version of rexml (pulled in by asciidoctor-diagram and prawn-svg) to fix incompatibility

=== Details

{url-repo}/releases/tag/v2.3.16[git tag] | {url-repo}/compare/v2.3.15\...v2.3.16[full diff]

== 2.3.15 (2024-03-12) - @mojavelinux

Improvements::

* drop links from entries in TOC (#2505)

Compliance::

* lock ttfunk to 1.7.x in the 2.3.x release line to avoid requiring Ruby headers (i.e., development libraries) to install gem (#2508)

=== Details

{url-repo}/releases/tag/v2.3.15[git tag] | {url-repo}/compare/v2.3.14\...v2.3.15[full diff]
